[package]
name = "rust-peer-to-peer-example"
version = "0.1.0"
authors = ["Mario Zupan <mario@zupzup.org>"]
edition = "2018"

[dependencies]
libp2p = { version = "0.31", features = ["tcp-tokio", "mdns-tokio"] }
tokio = { version = "0.3", features = ["io-util", "io-std", "stream", "macros", "rt", "rt-multi-thread"] }
futures = "0.3"
serde = {version = "=1.0", features = ["derive"] }
serde_json = "=1.0"
